<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131347"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        style="@style/nameStyle" />

    <EditText
        android:id="@+id/enter_hobbies"
        style="@style/generalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hobby_hint_text"
        android:inputType="textPersonName"
        android:textColorHint="#7B7B7B"
        android:autofillHints="@string/auto_fill_hints" />

    <Button
        android:id="@+id/done_button"
        style="@style/generalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="addHobies"
        android:layout_marginBottom="10dp"
        android:background="#009688"
        android:text="@string/done_text" />

    <TextView
        android:id="@+id/hobbies_text"
        style="@style/generalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            style="@style/generalStyle"
            android:fontFamily="@font/poppins_light"
            android:text="@string/my_bio" />
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>